--- a/README.ME
+++ b/README.ME
@@ -18,7 +18,10 @@ Technologies & Packages Used:
 - Mongoose for MongoDB Object Modeling
 - Multer for File Uploads
 - Passport Local for Local Authentication
-- Passport Local Mongoose for Mongoose-Specific Authentication
+- Passport Local Mongoose for Mongoose-Specific Authentication.
+Deployment 
+- Mongo Atlas for cloud Database
+- Render for Live the website
 
 Key Features:
 - User Authentication: Login, Logout, and User Profile Section
